--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta property="og:title" content="midii's website">
     <meta name="author" content="midii & Fazzoc">
     <meta name="description" content="this site includes links and everything you need to know about midii">
-    <meta property="og:image" content="assets/thumbtwo.jpg"/>
+    <meta property="og:image" content="assets/other/thumbnail.jpg"/>
     <meta property="og:image:type" content="image/jpeg"/>
     <meta property="og:image:width" content="1280"/>
     <meta property="og:image:height" content="800"/>
-    <link rel="icon" href="assets/midii.svg">
+    <link rel="icon" href="assets/icons/midii.svg">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -18,9 +18,9 @@
 
     <section id="bear5" style="position: absolute; background-color: black;">
         <div>
-            <img src="assets/bear5.webp"> <img src="assets/bear5.webp">
-            <img src="assets/bear5.webp"> <img src="assets/bear5.webp">
-            <img src="assets/bear5.webp">
+            <img src="assets/other/bear5.webp"> <img src="assets/other/bear5.webp">
+            <img src="assets/other/bear5.webp"> <img src="assets/other/bear5.webp">
+            <img src="assets/other/bear5.webp">
             <h1>BEAR5 ATTACK RAHHHHH!!!!!!!!!!</h1> 
             <ul class="button1">
                 <a href="#about">◀ back</a> 
@@ -29,11 +29,11 @@
     </section>
 
     <section id="start" style="position: fixed; background-color: black;">
-        <a href="#about"><img alt="midii logo" src="assets/midii.svg" class="logo"></a>
+        <a href="#about"><img alt="midii logo" src="assets/icons/midii.svg" class="logo"></a>
     </section>
 
     <p class="midii">
-        <img alt="midii" src="assets/textlogo.png" style="width: 200px">
+        <img alt="midii" src="assets/other/textlogo.png" style="width: 200px">
         <br>WORK IN PROGRESS</p>
 
     <nav class="navbar">
@@ -65,9 +65,9 @@
         <p>Mae is the best Fortnite skin</p>
     <br>
         <h2>about site-</h2>
-        <p>this website was rebuilt from the ground up from my carrd with the help of Fazzoc,
-        <br>including some extra stuff as well (wip)</p>
-        <br>site version: 0.82
+        <p>this website was rebuilt from the ground up, based from my carrd with the help of Fazzoc,
+        <br>including some extra stuff as well! (wip)</p>
+        <br>site version: 0.83
         </p>
     </div>
     </section>
@@ -76,41 +76,41 @@
     <div>
         <h2>links to my stuff-</h2>
     <div class="button2">
-        <a href="https://www.youtube.com/@midiinya"><img src="assets/youtube.svg">midii</a>
-        <a href="https://www.youtube.com/@moremid"><img src="assets/youtube.svg">More Mid</a>
-        <a href="https://www.youtube.com/@midiiLIVE"><img src="assets/youtube.svg">midiiLIVE</a>
-        <a href="https://pronouns.page/@midii"><img src="assets/PronounsPage.svg">Pronouns.page</a>
-        <a href="https://www.twitch.tv/midiinya"><img src="assets/twitch.svg">Twitch</a>
-        <a href="https://www.reddit.com/user/midiinya"><img src="assets/reddit.svg">Reddit</a>
-        <a href="https://midiinya.bsky.social"><img src="assets/bsky.svg">Bsky</a>
-        <a href="https://ko-fi.com/midiinya"><img src="assets/ko-fi.svg">Ko-fi</a>
-        <a href="https://midii.bandcamp.com"><img src="assets/bandcamp.svg">Bandcamp</a>
-        <a href="https://gamebanana.com/members/1912000"><img src="assets/gamebanana.svg">GameBanana</a>
-        <a href="https://midii.newgrounds.com"><img src="assets/newgrounds.svg">Newgrounds</a>
-        <a href="https://steamcommunity.com/id/midiinya"><img src="assets/steam.svg">Steam</a>
-        <a href="https://www.roblox.com/users/116168381/profile"><img src="assets/roblox.svg">Roblox</a>
-        <a href="https://discord.gg/n57dwsB"><img src="assets/discord.svg">Discord Server</a>
+        <a href="https://www.youtube.com/@midiinya"><img src="assets/icons/youtube.svg">midii</a>
+        <a href="https://www.youtube.com/@moremid"><img src="assets/icons/youtube.svg">More Mid</a>
+        <a href="https://www.youtube.com/@midiiLIVE"><img src="assets/icons/youtube.svg">midiiLIVE</a>
+        <a href="https://pronouns.page/@midii"><img src="assets/icons/PronounsPage.svg">Pronouns.page</a>
+        <a href="https://www.twitch.tv/midiinya"><img src="assets/icons/twitch.svg">Twitch</a>
+        <a href="https://www.reddit.com/user/midiinya"><img src="assets/icons/reddit.svg">Reddit</a>
+        <a href="https://midiinya.bsky.social"><img src="assets/icons/bsky.svg">Bsky</a>
+        <a href="https://ko-fi.com/midiinya"><img src="assets/icons/ko-fi.svg">Ko-fi</a>
+        <a href="https://midii.bandcamp.com"><img src="assets/icons/bandcamp.svg">Bandcamp</a>
+        <a href="https://gamebanana.com/members/1912000"><img src="assets/icons/gamebanana.svg">GameBanana</a>
+        <a href="https://midii.newgrounds.com"><img src="assets/icons/newgrounds.svg">Newgrounds</a>
+        <a href="https://steamcommunity.com/id/midiinya"><img src="assets/icons/steam.svg">Steam</a>
+        <a href="https://www.roblox.com/users/116168381/profile"><img src="assets/icons/roblox.svg">Roblox</a>
+        <a href="https://discord.gg/n57dwsB"><img src="assets/icons/discord.svg">Discord Server</a>
     </div>
     </section>
 
     <section id="music">
     <div>
-        <h1>my music-</h1>  <!-- HMMMM, the layout for the song titles seems to be misplaced when in 1 row, will fix in next update --> 
+        <h1>my music-</h1>  <!-- HMMMM, the layout for the song titles seems to be misplaced when in 1 row, will fix in next update. (Update: i still haven't) --> 
             <h2>albums & EPs:<h2>
             <h2 style="text-align: center;">none yet</h2>
             <h3>singles:<h3>
         <div class="cover-grid">
             <h3>stickwavez</h3>
             <h3>chem</h3>
-                <a href="https://midii.bandcamp.com/album/stickwavez-legacy"><img src="assets/stickwavez.webp" class="cover rotateL"></a>
-                <a href="https://midii.bandcamp.com/album/chem"><img src="assets/PEAK.webp" class="cover rotateR"></a>
+                <a href="https://midii.bandcamp.com/album/stickwavez-legacy"><img src="assets/covers/stickwavez.webp" class="cover rotateL"></a>
+                <a href="https://midii.bandcamp.com/album/chem"><img src="assets/covers/PEAK.webp" class="cover rotateR"></a>
             <h3>california corndog 강남스타일 게이밍</h3>
             <h3>crystalCoda</h3>
-                <a href="https://midii.bandcamp.com/track/california-corndog"><img src="assets/cali_corndog.webp" class="cover rotateL"></a>
-                <a href="https://midii.bandcamp.com/track/crystalcoda"><img src="assets/cover1.webp" class="cover rotateR"></a>
+                <a href="https://midii.bandcamp.com/track/california-corndog"><img src="assets/covers/cali_corndog.webp" class="cover rotateL"></a>
+                <a href="https://midii.bandcamp.com/track/crystalcoda"><img src="assets/covers/cover1.webp" class="cover rotateR"></a>
             <h3>insight</h3>
             <br>
-                <a href="https://midii.bandcamp.com/track/insight"><img src="assets/cover1.webp" class="cover rotateL"></a>
+                <a href="https://midii.bandcamp.com/track/insight"><img src="assets/covers/cover1.webp" class="cover rotateL"></a>
         </div>
             <p style="text-align: center;">more coming soon!</p>
         </div>
@@ -131,10 +131,10 @@
     <section id="edt">
         <div>
             <h2>EDTstudio-</h2>
-            <img alt="" src="assets/EDTstudio.webp" style="width: 250px;">
+            <img alt="" src="assets/other/EDTstudio.webp" style="width: 250px;">
             <p>EDTstudio (Epic Dump Trucks studio) is a studio i own along with <a href="https://www.youtube.com/@DuskDragonNight75">DuskDN75</a> and <a href="https://linktr.ee/Fazzoc">Fazzoc</a>
         <div class="button2">
-            <a href="https://epicdumptrucks.carrd.co/" class="button1"><img src="assets/carrd.svg">EDTstudio Carrd</a>
+            <a href="https://epicdumptrucks.carrd.co/" class="button1"><img src="assets/icons/carrd.svg">EDTstudio Carrd</a>
         </div>
             <p>more info in the carrd above!
             <br>this section will be replaced when we make a website for EDTstudio
@@ -156,7 +156,7 @@
     <div id="volume-control">
     <input type="range" id="volume-slider" min="0" max="1" step="0.01" value="1">
         <button id="volume-button">
-        <img id="volume-icon" src="assets/play.svg" alt="Play/Pause">
+        <img id="volume-icon" src="assets/icons/play.svg" alt="Play/Pause">
     </button>
     </div>
     
