--- a/index.html
+++ b/index.html
@@ -145,12 +145,12 @@
      <section id="merch">
         <div>
             <p>surely you jestin</p>
-            <img alt="honk honk! :)" src="assets/honk.webp" style=" width:54vh; border-radius: 0.5rem; display: block; margin: auto;">
+            <img alt="honk honk! :)" src="assets/other/honk.webp" style=" width:54vh; border-radius: 0.5rem; display: block; margin: auto;">
         </div>
      </section>
 
     <footer>
-        <a href="#bear5"><img alt="BEAR5!!" src="assets/bear5.webp" class="bear5"></a>
+        <a href="#bear5"><img alt="BEAR5!!" src="assets/other/bear5.webp" class="bear5"></a>
     </footer>
 
     <div id="volume-control">
